aligned items correctly in subreddit container and added some css to the buttons within

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,6 @@
 
 #posts-container {
   width: 80%;
-  background-color: #f0f0f0;
   padding-top: 10px;
   margin-left: 20px;
   border-radius: 8px;
@@ -37,33 +36,18 @@
   height: auto;
 }
 
-#subreddits-container {
-  background-color: gray;
-  width: 15%;
-  height: 400px;
-  padding-top: 10px;
-  margin-left: 30px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#subreddits-list {
-  display: flex;
-  flex-direction: column;
-}
-
 .post-card {
   display: flex;
+  background-color: #f0f0f0;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   width: 30%;
-  background-color: gray;
+  height: auto;
   margin: 15px;
   padding-top: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
+  border: solid 0.5px black;
   cursor: pointer;
 }
 
@@ -91,5 +75,35 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-left: 20px;
+  margin-right: 20px;
   width: 100%;
+}
+
+#subreddits-container {
+  background-color: #1DA1F2;
+  width: 15%;
+  height: 400px;
+  padding-top: 10px;
+  margin-left: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#subreddits-title {
+  color: #ffffff;
+}
+
+#subreddits-list {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+  width: 60%;
+  height: auto;
+}
+
+.subreddit-button {
+  margin-bottom: 10px;
 }
